# smart_b

./: .gitignore  .gitmodules  RAILWAY_DEPLOY.md  nixpacks.toml  railway-start.sh  railway.json
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260303_0001_init.py  20260303_0002_schedule_title.py  20260303_0003_role_levels.py  20260304_0004_task_value_jsonb.py  20260304_0005_task_sections.py  20260304_0006_section_schedule_1to1.py  20260304_0007_task_common_schedule.py  20260305_0008_drop_schedule_date_cols.py  20260306_0009_task_section_status.py  20260306_0010_users_phone.py  20260306_0011_users_avatar_path.py
backend/app/: main.py
backend/app/api/v1/: auth.py  company.py  deps.py  project.py  rbac.py  router.py  schedule.py  task.py  user.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  company.py  project.py  rbac.py  role_assignment.py  schedule.py  task.py  task_section.py  user.py
backend/app/schemas/: auth.py  domain.py
backend/app/services/: rbac_service.py  user_display_service.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/features/auth/login/: login-form.tsx
frontend/src/screens/home/: home-page.tsx
frontend/src/screens/present/: present-page.tsx
frontend/src/shared/theme/: mui-provider.tsx
frontend/src/widgets/app-header/: app-header.tsx
